syntax = "proto3";

package loginservice;

import "google/protobuf/empty.proto";

service LoginService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc Check(google.protobuf.Empty) returns (CheckResponse) {}
}

message LoginRequest {
   string username = 1;
   string password = 2;
}

message LoginResponse {
   string token = 1;
}

message CheckResponse {
   string uri = 1;
}
